--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-router": "^5.1.18",
     "animate.css": "^4.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-phone-input-2": "^2.15.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "typescript": "^4.6.3",
