--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-router": "^5.1.18",
     "animate.css": "^4.1.1",
+    "axios": "^0.26.1",
+    "axios-ts": "^0.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-phone-input-2": "^2.15.0",
