--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios-ts": "^0.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.29.0",
     "react-phone-input-2": "^2.15.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
