--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@farbenmeer/react-spring-slider": "^1.5.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
+    "swiper": "^8.1.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
