--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "axios-ts": "^0.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
+    "react-lodash": "^0.1.2",
     "react-phone-input-2": "^2.15.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
+    "redux-thunk": "^2.4.1",
     "swiper": "^8.1.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/react-transition-group": "^4.4.4"
   }
 }
